--- a/add client.html
+++ b/add client.html
@@ -41,60 +41,58 @@
     <div class="container">
       <section>
         <h1 class="d-form-head my-5">Add Client</h1>
-        <table class="table" width="100%">
-          <thead>
-            <tr>
-              <th scope="col">s.no</th>
-              <th scope="col">date</th>
-              <th scope="col">client name</th>
-              <th scope="col">address</th>
-              <th scope="col">client's cell num</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td class="p-0" width="50rem">
-                <input
-                  type="text"
-                  id="add-client-sno"
-                  class="py-1 form-inps"
-                  readonly
-                />
-              </td>
-              <td class="p-0" width="50rem">
-                <input
-                  type="date"
-                  id="add-client-date"
-                  class="form-inps py-1"
-                />
-              </td>
-              <td class="p-0" width="300rem">
-                <select id="add-client-client-name" class="form-inps py-1">
-                  <option value="client 1">client 1</option>
-                  <option value="client 2">client 2</option>
-                  <option value="client 3">client 3</option>
-                  <option value="client 4">client 4</option>
-                  <option value="client 5">client 5</option>
-                </select>
-              </td>
-              <td class="p-0" width="300rem">
-                <input
-                  type="text"
-                  id="add-client-address"
-                  class="py-1 form-inps"
-                  autocomplete="off"
-                />
-              </td>
-              <td class="p-0" width="200rem">
-                <input
-                  type="number"
-                  id="add-client-client-cell-num"
-                  class="py-1 form-inps"
-                />
-              </td>
-            </tr>
-          </tbody>
-        </table>
+        <form id="add-client-form">
+          <table class="table" width="100%">
+            <thead>
+              <tr>
+                <th scope="col">date</th>
+                <th scope="col">client name</th>
+                <th scope="col">address</th>
+                <th scope="col">client's cell num</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="p-0" width="50rem">
+                  <input
+                    type="date"
+                    id="add-client-date"
+                    class="form-inps py-1"
+                  />
+                </td>
+                <td class="p-0" width="300rem">
+                  <select id="add-client-client-name" class="form-inps py-1">
+                    <option value="client 1">client 1</option>
+                    <option value="client 2">client 2</option>
+                    <option value="client 3">client 3</option>
+                    <option value="client 4">client 4</option>
+                    <option value="client 5">client 5</option>
+                  </select>
+                </td>
+                <td class="p-0" width="300rem">
+                  <input
+                    type="text"
+                    id="add-client-address"
+                    class="py-1 form-inps"
+                    autocomplete="off"
+                  />
+                </td>
+                <td class="p-0" width="200rem">
+                  <input
+                    type="number"
+                    id="add-client-client-cell-num"
+                    class="py-1 form-inps"
+                  />
+                </td>
+
+                <td class="p-0" width="50rem">
+                  <button class="py-1 form-inps">save</button>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <div class="col-12 added-data-ctnr"></div>
+        </form>
       </section>
     </div>
   </body>
