--- a/add vendor.html
+++ b/add vendor.html
@@ -99,7 +99,18 @@
           </tbody>
         </table>
 
-        <div class="col-12 added-data-ctnr"></div>
+        <!-- <div class="col-12 added-data-ctnr"></div> -->
+        <table class="mt-5 table">
+          <thead>
+            <th scope="col" class="form-h-row">s.no</th>
+            <th scope="col" class="form-h-row">date</th>
+            <th scope="col" class="form-h-row">vendor name</th>
+            <th scope="col" class="form-h-row">address</th>
+            <th scope="col" class="form-h-row">cell num</th>
+          </thead>
+
+          <tbody class="added-data-ctnr mt-5"></tbody>
+        </table>
       </form>
     </div>
   </body>
